--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <a href="#home" class="w3-bar-item w3-button">HOME</a>
             <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT TEAM</a>
             <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PICTURES</a>
-            <!-- <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> </a> -->
+            <a href="#story" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> THE STORY</a>
 
         </div>
 
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
             <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
             <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-            <!-- <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a> -->
+            <a href="#story" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
         </div>
     </div>
 
@@ -122,7 +122,7 @@
     </div>
 
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
-        <h3 class="w3-center"> Tottenham Hotspur TEAM</h3>
+        <h3 class="w3-center"> Tottenham Hotspur Team</h3>
         <p class="w3-center"><em><b>Tottenham Hotspur F.C. is here!<br> Click on the images to make
                     them bigger</b></em></p><br>
 
@@ -207,6 +207,45 @@
         <div class="w3-display-middle">
             <span class="w3-xxlarge w3-text-white w3-wide"></span>
         </div>
+    </div>
+
+    <div class="w3-content w3-container w3-padding-64" id="story">
+        <h3 class="w3-center">THE STORY BEHIND</h3>
+        <p class="font-18">&nbsp;&nbsp;Based in the Tottenham district of the London borough of Haringey, Tottenham
+            Hotspur is among the winningest clubs in English soccer (association football). The team, nicknamed the
+            Spurs, has won the English top-division league championship twice. It has won the League Cup four times and
+            the Football Association (FA) Cup eight times. It has also enjoyed notable success in international
+            competition.
+
+            The team was founded in 1882 by members of the Hotspur cricket club in Tottenham. Known as Tottenham Hotspur
+            from 1884, the team became a professional soccer club in 1895. It joined the Southern League the following
+            year. In 1901 it captured its first FA Cup with a victory over Sheffield United, becoming the first team
+            from outside of the English Football League to claim the trophy. Tottenham Hotspur was eventually admitted
+            to the English Football League’s Second Division in 1908. It earned promotion to the First Division after
+            the 1908–09 season. The Spurs soon developed a famous rivalry with Arsenal, another popular soccer club
+            based in North London. The two teams face off in a “North London derby” match nearly every year.</p>
+        <div class="w3-row">
+
+            <div class="w3-col m6 w3-hide-small w3-padding-large">
+                <p class="font-18">Tottenham Hotspur earned its second FA Cup in 1921. However, the club did not win
+                    another major trophy until after Arthur Rowe became manager of the Spurs in 1949. Rowe introduced a
+                    distinctive “push-and-run” style of play, which relied on short, quick passes and constant ball
+                    movement. Under Rowe, the Spurs won their first top-division league championship in 1950–51. One of
+                    Rowe’s players, Bill Nicholson, later served as manager of the team from 1958 to 1974. Nicholson’s
+                    tenure marked the Spurs’ most successful era. In 1960–61 the team completed a rare “double” by
+                    winning both the league championship and the FA Cup. The Spurs repeated as FA Cup champion in 1962.
+                    The next year the team claimed the European Cup Winners’ Cup—the first major continental trophy ever
+                    won by an English team.
+
+                </p>
+            </div>
+            <div class="w3-col m6 w3-center w3-padding-large">
+                <p class="font-18"><b>Family Photo</b></p><br>
+                <img src="./jpg/17.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
+                    width="500" height="333">
+            </div>
+        </div>
+
     </div>
 
     <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
